Minor fixes, update README.md

--- a/examples/Usage.ipynb
+++ b/examples/Usage.ipynb
@@ -647,8 +647,6 @@
    },
    "outputs": [],
    "source": [
-    "params = model.parameters()\n",
-    "\n",
     "fdict = {\n",
     "    \"model\":model,\n",
     "    \"loss_function\":loss_function,\n",
@@ -669,7 +667,7 @@
     "    \"valid_epoch_end\": common_epoch_end,\n",
     "    \"test_epoch_end\": common_epoch_end,\n",
     "    \n",
-    "    # Function to \n",
+    "    # Config Optimizer\n",
     "    \"configure_optimizer\":configure_optimizer,\n",
     "    \n",
     "    # Model Evaluation\n",
