Fix typos, publish to pypi

--- a/examples/Usage.ipynb
+++ b/examples/Usage.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "- Example consists of training a simple pytorch model using `FitLoop`.\n",
-    "- Demonstrates the more than the basic usage of `FitLoop`.\n",
+    "- Demonstrates more than the basic usage of `FitLoop`.\n",
     "\n",
     "*Imports are called when required.*"
    ]
@@ -815,7 +815,9 @@
    "source": [
     "#### Profiler\n",
     "- Used to check how much time is being take by each stage  of the loop.\n",
-    "- Values with a '_t' at the end pretain to the test loop."
+    "- Values with a '_t' at the end pretain to the test loop.\n",
+    "\n",
+    "*The profiling used method may not lead to very accurate results; a future release may make use of `cProfiler` which allows for calibration*"
    ]
   },
   {
